# Project_simulation-Real-

./: .gitignore  BMM_Antithetic_Designs.csv  BMM_Representative_Designs.csv  BMM_Representative_Designs.md  FIXLIST.md  HANDOFF_FOR_AI.md  QA_REPORT.md  README.md  README_AGENTIC_PIPELINE.md  REPORT_IMPROVEMENT_PLAN.md  Simulation_Project_Report.md  batch_means_analysis.py  batch_size_analysis.py  full_sweep_antithetic.csv  generate_report_pdf.py  phased_sweep_results.csv  pyproject.toml  report.aux  report.out  report.tex  report.toc  requirements.txt  robust_warmup_analysis.py  run_antithetic_bmm.py  run_full_sweep.py  run_phased_screening.py  run_representative_bmm.py  update_representative_csvs.py
agents/: AssignmentInterpreterAgent.md  ExperimentalDesignAgent.md  OptimisationAndParetoAgent.md  OutputAnalysisAgent.md  QAReviewerAgent.md  ReportWriterAgent.md  ScheduleGeneratorAgent.md  SimulationArchitectAgent.md  StatisticalComparisonAgent.md
config/: project_config.yaml
docs/: assignment_interpretation.md
report_assets/: figure_captions.md  latex_tables.tex  methodology_draft.md  report_outline.md  results_draft.md
sma_agents/: __init__.py  run_pipeline.py
sma_sim/: __init__.py  analysis.py  config.py  entities.py  plotting.py  random_streams.py  reporting.py  schedule.py  simulation.py
smaproject2026/: input-S1-14.txt
smaproject2026/cpp-code/: CMakeLists.txt  main.cpp  readme.txt
smaproject2026/cpp-code/include/: Helper.hpp  Simulation.hpp
smaproject2026/cpp-code/src/: Helper.cpp  Simulation.cpp
tests/: test_rules_and_randomness.py  (+2 more)
(+11 files in other folders)
