[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-sma-radiology"
version = "0.1.0"
description = "Reproducible agentic simulation-analysis pipeline for the SMA radiology appointment assignment."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyarrow>=12"]

[tool.setuptools]
packages = ["sma_sim", "sma_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
